# MarshalTest

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  MarshalTest.sln  README.md
Source/: Directory.Build.props
Source/MarshalTest/: ArrayPoolExtensions.cs  MarshalNative.cs  MarshalTest.csproj  NativeVector2.cs  Program.cs  Window.cs
Source/Native/: CMakeLists.txt  SDLTest.cpp  SDLTest.hpp  StringTest.cpp  StringTest.hpp
